# M3m01r5

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
config/: GLOBAL_CONFIG.json  GLOBAL_CONFIG.json.bak  M3m01r5_CONFIG.json  m3m01r5_config.yaml
config/config.d/: 10_logging.yaml  20_display.yaml
config/config.d/descriptors/: 10_about.yaml  20_feelings.yaml  30_media.yaml  40_metadata.yaml
src/M3m01r5/: __init__.py  config_manager.py  entry_schema.py  journal_store.py  main.py
src/M3m01r5/cli/: __init__.py  formatters.py  menu.py
tests/: test_m3m01r5.py  test_paths.json
